@@ -4,9 +4,9 @@
 
 package org.chromium.chrome.browser.ui.browser_window;
 
-import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.anyBoolean;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.mockingDetails;
 import static org.mockito.Mockito.when;
@@ -18,12 +18,14 @@ import android.app.Activity;
 import android.app.ActivityManager;
 import android.app.ActivityManager.AppTask;
 import android.content.Context;
-import android.content.Intent;
 import android.graphics.Insets;
 import android.graphics.Rect;
+import android.os.Build;
 import android.os.Build.VERSION;
 import android.os.Build.VERSION_CODES;
 import android.util.Pair;
+import android.view.View;
+import android.view.ViewTreeObserver;
 import android.view.Window;
 import android.view.WindowInsets;
 import android.view.WindowInsetsController;
@@ -42,13 +44,14 @@ import org.chromium.base.supplier.ObservableSuppliers;
 import org.chromium.base.supplier.SettableMonotonicObservableSupplier;
 import org.chromium.build.annotations.NullMarked;
 import org.chromium.build.annotations.Nullable;
-import org.chromium.chrome.browser.customtabs.PopupIntentCreator;
-import org.chromium.chrome.browser.customtabs.PopupIntentCreatorProvider;
+import org.chromium.chrome.browser.customtabs.PopupCreator;
+import org.chromium.chrome.browser.customtabs.PopupCreatorFactory;
 import org.chromium.chrome.browser.lifecycle.ActivityLifecycleDispatcher;
 import org.chromium.chrome.browser.lifecycle.ActivityLifecycleDispatcherProvider;
-import org.chromium.chrome.browser.multiwindow.MultiInstanceManager;
+import org.chromium.chrome.browser.multiwindow.MultiInstanceOrchestrator;
+import org.chromium.chrome.browser.multiwindow.MultiInstanceOrchestratorFactory;
 import org.chromium.chrome.browser.profiles.Profile;
-import org.chromium.chrome.browser.profiles.ProfileManager;
+import org.chromium.chrome.browser.tabmodel.IncognitoTabModel;
 import org.chromium.chrome.browser.tabmodel.SupportedProfileType;
 import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.browser.tabmodel.TabModelSelector;
@@ -62,6 +65,7 @@ import org.chromium.ui.mojom.WindowShowState;
 
 import java.lang.ref.WeakReference;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 /** Supports Robolectric and native unit tests relevant to {@link ChromeAndroidTask}. */
@@ -130,13 +134,7 @@ public final class ChromeAndroidTaskUnitTestSupport {
         public final AppTask mMockAppTask;
         public final AconfigFlaggedApiDelegate mMockAconfigFlaggedApiDelegate;
 
-        /**
-         * Mock {@link AndroidBrowserWindow.Natives}.
-         *
-         * <p>This is {@code null} if {@link #createChromeAndroidTaskWithMockDeps(int, boolean,
-         * boolean)} was called with {@code mockNatives} set to false, in which case the test is
-         * expected to run the real native code.
-         */
+        /** Mock {@link AndroidBrowserWindow.Natives}. */
         final AndroidBrowserWindow.@Nullable Natives mMockAndroidBrowserWindowNatives;
 
         ChromeAndroidTaskWithMockDeps(
@@ -184,23 +182,17 @@ public final class ChromeAndroidTaskUnitTestSupport {
     /** Fake native pointer value returned by {@link AndroidBrowserWindow.Natives#create}. */
     public static final long FAKE_NATIVE_ANDROID_BROWSER_WINDOW_PTR = 123456789L;
 
-    private ChromeAndroidTaskUnitTestSupport() {}
+    public static final long FAKE_INCOGNITO_NATIVE_ANDROID_BROWSER_WINDOW_PTR = 987654321L;
 
-    /**
-     * @see #createChromeAndroidTaskWithMockDeps(int, boolean, boolean, boolean)
-     */
-    public static ChromeAndroidTaskWithMockDeps createChromeAndroidTaskWithMockDeps(
-            int taskId, boolean mockNatives, boolean isPendingTask) {
-        return createChromeAndroidTaskWithMockDeps(taskId, mockNatives, isPendingTask, false);
-    }
+    private static @Nullable PopupCreator sPopupCreator;
+    private static @Nullable MultiInstanceOrchestrator sMultiInstanceOrchestrator;
+
+    private ChromeAndroidTaskUnitTestSupport() {}
 
     /**
      * Creates a real {@link ChromeAndroidTask} with mock dependencies.
      *
      * @param taskId ID for {@link ChromeAndroidTask#getId()}.
-     * @param mockNatives Whether to mock {@code @NativeMethods}. Set this to false if the test
-     *     needs to run native code, such as in .cc unit tests. Tests that set this to false must
-     *     initialize a Native ProfileManager with a valid profile.
      * @param isPendingTask If true, the returned {@link ChromeAndroidTask} will be in the pending
      *     state. The returned mock dependencies will not be connected with the pending {@link
      *     ChromeAndroidTask}. To connect the mocks with the pending {@link ChromeAndroidTask}, pass
@@ -210,24 +202,52 @@ public final class ChromeAndroidTaskUnitTestSupport {
      * @return A new instance of {@link ChromeAndroidTaskWithMockDeps}.
      */
     public static ChromeAndroidTaskWithMockDeps createChromeAndroidTaskWithMockDeps(
-            int taskId, boolean mockNatives, boolean isPendingTask, boolean isDesktopMode) {
-        Profile profile =
-                mockNatives ? mock(Profile.class) : ProfileManager.getLastUsedRegularProfile();
+            int taskId, boolean isPendingTask, boolean isDesktopMode) {
+        return createChromeAndroidTaskWithMockDeps(
+                taskId, isPendingTask, isDesktopMode, SupportedProfileType.REGULAR);
+    }
+
+    /**
+     * Creates a real {@link ChromeAndroidTask} with mock dependencies.
+     *
+     * @param taskId ID for {@link ChromeAndroidTask#getId()}.
+     * @param isPendingTask If true, the returned {@link ChromeAndroidTask} will be in the pending
+     *     state. The returned mock dependencies will not be connected with the pending {@link
+     *     ChromeAndroidTask}. To connect the mocks with the pending {@link ChromeAndroidTask}, pass
+     *     them to {@link ChromeAndroidTask#addActivityScopedObjects}.
+     * @param isDesktopMode if true, mock the activity in a desktop mode with proper insets and
+     *     screen bounds.
+     * @param profileType The {@link SupportedProfileType} for the task.
+     * @return A new instance of {@link ChromeAndroidTaskWithMockDeps}.
+     */
+    public static ChromeAndroidTaskWithMockDeps createChromeAndroidTaskWithMockDeps(
+            int taskId,
+            boolean isPendingTask,
+            boolean isDesktopMode,
+            @SupportedProfileType int profileType) {
+        Profile profile = mock(Profile.class);
         var activityWindowAndroidMocks = createActivityWindowAndroidMocks(taskId);
         if (isDesktopMode && VERSION.SDK_INT >= VERSION_CODES.R) {
             mockDesktopWindowingMode(activityWindowAndroidMocks);
         }
         var activityScopedObjects =
                 createMockActivityScopedObjects(
-                        activityWindowAndroidMocks.mMockActivityWindowAndroid, profile);
-        var mockAndroidBrowserWindowNatives =
-                mockNatives ? createMockAndroidBrowserWindowNatives() : null;
+                        activityWindowAndroidMocks.mMockActivityWindowAndroid,
+                        profile,
+                        BrowserWindowType.NORMAL,
+                        profileType);
+        var mockAndroidBrowserWindowNatives = createMockAndroidBrowserWindowNatives();
 
         var chromeAndroidTaskTracker = ChromeAndroidTaskTrackerImpl.getInstance();
         var chromeAndroidTask =
                 isPendingTask
                         ? chromeAndroidTaskTracker.createPendingTask(
-                                createPendingTaskInfo().mCreateParams, null)
+                                createMockAndroidBrowserWindowCreateParams(
+                                        BrowserWindowType.NORMAL,
+                                        new Rect(),
+                                        WindowShowState.DEFAULT,
+                                        profile),
+                                null)
                         : chromeAndroidTaskTracker.obtainTask(
                                 BrowserWindowType.NORMAL,
                                 activityScopedObjects,
@@ -269,13 +289,27 @@ public final class ChromeAndroidTaskUnitTestSupport {
      */
     static ChromeAndroidTask.ActivityScopedObjects createMockActivityScopedObjects(
             int taskId, Profile profile) {
+        return createMockActivityScopedObjects(taskId, profile, BrowserWindowType.NORMAL);
+    }
+
+    /**
+     * Creates a {@link ChromeAndroidTask.ActivityScopedObjects} instance containing mock objects.
+     *
+     * @param taskId The Task ID of the {@code Activity} the mock objects are associated with.
+     * @param profile The {@link Profile} the mock objects are associated with.
+     * @param windowType The mock {@link BrowserWindowType} for this window.
+     * @return The new {@link ChromeAndroidTask.ActivityScopedObjects} instance.
+     */
+    static ChromeAndroidTask.ActivityScopedObjects createMockActivityScopedObjects(
+            int taskId, Profile profile, @BrowserWindowType int windowType) {
         var activityWindowAndroidMocks = createActivityWindowAndroidMocks(taskId);
         if (VERSION.SDK_INT >= VERSION_CODES.R) {
             mockDesktopWindowingMode(activityWindowAndroidMocks);
         }
         var activityWindowAndroid = activityWindowAndroidMocks.mMockActivityWindowAndroid;
 
-        return createMockActivityScopedObjects(activityWindowAndroid, profile);
+        return createMockActivityScopedObjects(
+                activityWindowAndroid, profile, windowType, SupportedProfileType.REGULAR);
     }
 
     /**
@@ -288,30 +322,61 @@ public final class ChromeAndroidTaskUnitTestSupport {
      */
     static ChromeAndroidTask.ActivityScopedObjects createMockActivityScopedObjects(
             ActivityWindowAndroid activityWindowAndroid, Profile profile) {
+        return createMockActivityScopedObjects(
+                activityWindowAndroid,
+                profile,
+                BrowserWindowType.NORMAL,
+                SupportedProfileType.REGULAR);
+    }
+
+    /**
+     * Creates a {@link ChromeAndroidTask.ActivityScopedObjects} instance containing mock objects.
+     *
+     * @param activityWindowAndroid The {@link ActivityWindowAndroid} for the {@code Activity} the
+     *     mock objects are associated with.
+     * @param profile The {@link Profile} the mock objects are associated with.
+     * @param windowType The mock {@link BrowserWindowType} for this window.
+     * @param profileType The {@link SupportedProfileType} for this window.
+     * @return The new {@link ChromeAndroidTask.ActivityScopedObjects} instance.
+     */
+    static ChromeAndroidTask.ActivityScopedObjects createMockActivityScopedObjects(
+            ActivityWindowAndroid activityWindowAndroid,
+            Profile profile,
+            @BrowserWindowType int windowType,
+            @SupportedProfileType int profileType) {
         assert mockingDetails(activityWindowAndroid).isMock();
 
         // TODO(http://crbug.com/454954191): Use the "MockTabModel" class.
         var mockTabModel = mock(TabModel.class);
         when(mockTabModel.getProfile()).thenReturn(profile);
 
+        // Assume the regular tab model is always the current tab model.
         var mockTabModelSelector = mock(TabModelSelector.class);
         SettableMonotonicObservableSupplier<TabModel> tabModelSupplier =
                 ObservableSuppliers.createMonotonic();
         tabModelSupplier.set(mockTabModel);
+        when(mockTabModelSelector.getModel(false)).thenReturn(mockTabModel);
         when(mockTabModelSelector.getCurrentTabModelSupplier()).thenReturn(tabModelSupplier);
         when(mockTabModelSelector.getCurrentModel()).thenReturn(mockTabModel);
+
+        // Even when we have a dedicated window per-profile both TabModels will still exist;
+        // however, one will always be empty.
+        var mockIncognitoTabModel = mock(IncognitoTabModel.class);
+        when(mockTabModelSelector.getModel(true)).thenReturn(mockIncognitoTabModel);
         when(mockTabModelSelector.getModels())
-                .thenReturn(java.util.Collections.singletonList(mockTabModel));
+                .thenReturn(List.of(mockTabModel, mockIncognitoTabModel));
+
+        // Initially there is no incognito profile until an incognito tab is created.
+        when(mockIncognitoTabModel.getProfile()).thenReturn(null);
 
         var mockDesktopWindowStateManager = mock(DesktopWindowStateManager.class);
-        var mockMultiInstanceManager = createMockMultiInstanceManager();
 
         return new ChromeAndroidTask.ActivityScopedObjects(
                 activityWindowAndroid,
                 mockTabModelSelector,
-                SupportedProfileType.REGULAR,
-                mockDesktopWindowStateManager,
-                mockMultiInstanceManager);
+                windowType,
+                profileType,
+                mockDesktopWindowStateManager);
     }
 
     /**
@@ -330,6 +395,16 @@ public final class ChromeAndroidTaskUnitTestSupport {
         var mockActivityManager = mock(ActivityManager.class);
         var mockDisplay = mock(DisplayAndroid.class);
         var mockInsetObserver = mock(InsetObserver.class);
+        // ViewTreeObserver is a final class in Android so it can't be mocked in
+        // tests using the real Android framework.
+        View testRootView;
+        if (Build.FINGERPRINT == null || "robolectric".equals(Build.FINGERPRINT)) {
+            testRootView = mock(View.class);
+            var observer = mock(ViewTreeObserver.class);
+            when(testRootView.getViewTreeObserver()).thenReturn(observer);
+        } else {
+            testRootView = new View(ContextUtils.getApplicationContext());
+        }
 
         when(mockActivity.getTaskId()).thenReturn(taskId);
         when(mockActivity.getWindowManager()).thenReturn(mockWindowManager);
@@ -337,6 +412,7 @@ public final class ChromeAndroidTaskUnitTestSupport {
                 .thenReturn(mockActivityManager);
         when(((ActivityLifecycleDispatcherProvider) mockActivity).getLifecycleDispatcher())
                 .thenReturn(mockActivityLifecycleDispatcher);
+        when(mockActivity.findViewById(android.R.id.content)).thenReturn(testRootView);
 
         when(mockDisplay.getDipScale()).thenReturn(1.0f);
 
@@ -357,8 +433,9 @@ public final class ChromeAndroidTaskUnitTestSupport {
 
     /**
      * Creates a mock {@link AndroidBrowserWindow.Natives} that returns {@link
-     * #FAKE_NATIVE_ANDROID_BROWSER_WINDOW_PTR} when {@link AndroidBrowserWindow.Natives#create} is
-     * called.
+     * #FAKE_NATIVE_ANDROID_BROWSER_WINDOW_PTR} or {@link
+     * #FAKE_INCOGNITO_NATIVE_ANDROID_BROWSER_WINDOW_PTR} when {@link
+     * AndroidBrowserWindow.Natives#create} is called.
      *
      * <p>This method also sets the mock as the testing instance for {@link
      * AndroidBrowserWindowJni}.
@@ -369,28 +446,45 @@ public final class ChromeAndroidTaskUnitTestSupport {
                         /* caller= */ any(),
                         /* browserWindowType= */ anyInt(),
                         /* profile= */ any()))
-                .thenReturn(FAKE_NATIVE_ANDROID_BROWSER_WINDOW_PTR);
+                .thenAnswer(
+                        invocation -> {
+                            Profile profile = invocation.getArgument(2);
+                            return profile.isOffTheRecord()
+                                    ? FAKE_INCOGNITO_NATIVE_ANDROID_BROWSER_WINDOW_PTR
+                                    : FAKE_NATIVE_ANDROID_BROWSER_WINDOW_PTR;
+                        });
 
         AndroidBrowserWindowJni.setInstanceForTesting(mockAndroidBrowserWindowNatives);
 
         return mockAndroidBrowserWindowNatives;
     }
 
-    /** Mocks {@link PopupIntentCreator}. */
-    private static void mockPopupIntentCreator() {
-        PopupIntentCreator mockCreator = mock(PopupIntentCreator.class);
-        when(mockCreator.createPopupIntent(any(), anyBoolean()))
-                .thenAnswer(
-                        invocation -> {
-                            Intent intent = new Intent();
-                            // Prevents crashing in IntentUtils#addTrustedIntentExtras().
-                            intent.setPackage(
-                                    ContextUtils.getApplicationContext().getPackageName());
-                            intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-                            return intent;
-                        });
-        PopupIntentCreatorProvider.setInstance(mockCreator);
-        ResettersForTesting.register(() -> PopupIntentCreatorProvider.resetInstanceForTesting());
+    /** Mocks {@link PopupCreator}. */
+    public static PopupCreator mockPopupCreator() {
+        if (sPopupCreator != null) return sPopupCreator;
+        sPopupCreator = mock(PopupCreator.class);
+        when(sPopupCreator.createNewPopup(any(), anyBoolean(), any(), any(), any()))
+                .thenReturn(true);
+        when(sPopupCreator.createNewPopupFromWebContents(any(), any(), any(), any(), any(), any()))
+                .thenReturn(true);
+        PopupCreatorFactory.setInstanceForTesting(sPopupCreator);
+        ResettersForTesting.register(() -> sPopupCreator = null);
+        return sPopupCreator;
+    }
+
+    /** Mocks {@link MultiInstanceOrchestrator}. */
+    public static MultiInstanceOrchestrator mockMultiInstanceOrchestrator() {
+        if (sMultiInstanceOrchestrator != null) return sMultiInstanceOrchestrator;
+        sMultiInstanceOrchestrator = mock(MultiInstanceOrchestrator.class);
+        when(sMultiInstanceOrchestrator.createNewWindow(
+                        any(), anyBoolean(), any(), any(), anyInt()))
+                .thenReturn(true);
+        when(sMultiInstanceOrchestrator.createNewWindowFromWebContents(
+                        any(), any(), any(), any(), any(), anyInt()))
+                .thenReturn(true);
+        MultiInstanceOrchestratorFactory.setInstanceForTesting(sMultiInstanceOrchestrator);
+        ResettersForTesting.register(() -> sMultiInstanceOrchestrator = null);
+        return sMultiInstanceOrchestrator;
     }
 
     static ChromeAndroidTask.PendingTaskInfo createPendingTaskInfo() {
@@ -402,11 +496,11 @@ public final class ChromeAndroidTaskUnitTestSupport {
         JniOnceCallback<Long> mockCallback = mock();
 
         return new ChromeAndroidTask.PendingTaskInfo(
-                IdSequencer.next(), createParams, new Intent(), mockCallback);
+                IdSequencer.next(), createParams, mockCallback);
     }
 
     /**
-     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int)
+     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int, Profile)
      */
     static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams() {
         return createMockAndroidBrowserWindowCreateParams(
@@ -414,7 +508,7 @@ public final class ChromeAndroidTaskUnitTestSupport {
     }
 
     /**
-     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int)
+     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int, Profile)
      */
     static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams(
             @BrowserWindowType int windowType) {
@@ -423,24 +517,38 @@ public final class ChromeAndroidTaskUnitTestSupport {
     }
 
     /**
-     * Creates an {@link AndroidBrowserWindowCreateParams} mock.
-     *
-     * @param windowType The mock {@link BrowserWindowType} to set in the create params.
-     * @param launchBounds The launch bounds to set in the create params.
-     * @param showState The mock {@link WindowShowState} to set in the create params.
-     * @return The {@link AndroidBrowserWindowCreateParams} mock.
+     * @see #createMockAndroidBrowserWindowCreateParams(int, Rect, int, Profile)
      */
     static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams(
             @BrowserWindowType int windowType,
             Rect launchBounds,
             @WindowShowState.EnumType int showState) {
+        return createMockAndroidBrowserWindowCreateParams(
+                windowType, launchBounds, showState, mock(Profile.class));
+    }
+
+    /**
+     * Creates an {@link AndroidBrowserWindowCreateParams} mock.
+     *
+     * @param windowType The mock {@link BrowserWindowType} to set in the create params.
+     * @param launchBounds The launch bounds to set in the create params.
+     * @param showState The mock {@link WindowShowState} to set in the create params.
+     * @param profile The {@link Profile} to set in the create params.
+     * @return The {@link AndroidBrowserWindowCreateParams} mock.
+     */
+    static AndroidBrowserWindowCreateParams createMockAndroidBrowserWindowCreateParams(
+            @BrowserWindowType int windowType,
+            Rect launchBounds,
+            @WindowShowState.EnumType int showState,
+            Profile profile) {
         var mockParams = mock(AndroidBrowserWindowCreateParams.class);
         when(mockParams.getWindowType()).thenReturn(windowType);
-        Profile mockProfile = mock(Profile.class);
-        when(mockParams.getProfile()).thenReturn(mockProfile);
-        when(mockParams.getInitialBounds()).thenReturn(launchBounds);
+        when(mockParams.getProfile()).thenReturn(profile);
+        when(mockParams.getInitialBoundsInDp()).thenReturn(launchBounds);
         when(mockParams.getInitialShowState()).thenReturn(showState);
-        mockPopupIntentCreator();
+        when(mockParams.getWebContents()).thenReturn(null);
+        mockPopupCreator();
+        mockMultiInstanceOrchestrator();
 
         return mockParams;
     }
@@ -524,22 +632,5 @@ public final class ChromeAndroidTaskUnitTestSupport {
                         .build();
         var maxWindowMetrics = new WindowMetrics(fullScreenWindowBoundsInPx, maxWindowInsets);
         when(mockWindowManager.getMaximumWindowMetrics()).thenReturn(maxWindowMetrics);
-    }
-
-    private static MultiInstanceManager createMockMultiInstanceManager() {
-        var mockMultiInstanceManager = mock(MultiInstanceManager.class);
-
-        // Unit tests don't need to care what the Intent is. They only need to verify the correct
-        // MultiInstanceManager API is called.
-        //
-        // The Intent here is the bare minimum to ensure unit tests pass:
-        // (1) The Intent is not null; and
-        // (2) The Intent has the FLAG_ACTIVITY_NEW_TASK flag to avoid the "background Activity
-        // launch" error in unit tests.
-        var intent = new Intent();
-        intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-
-        when(mockMultiInstanceManager.createNewWindowIntent(anyBoolean())).thenReturn(intent);
-        return mockMultiInstanceManager;
     }
 }
